--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
       MLFLOW_TRACKING_URI: file://${{ github.workspace }}/mlruns
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Miniconda and environment
+      - name: Setup Miniconda environment
         uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
@@ -40,18 +40,19 @@ jobs:
 
       - name: Install additional Python dependencies
         shell: bash -l {0}
-        run: pip install --upgrade dagshub mlflow  # Removed version pinning as per latest instructions
+        run: |
+          pip install --upgrade dagshub mlflow
 
-      - name: Debug Conda Environment
+      - name: Debug Conda Installed Packages
         shell: bash -l {0}
         run: conda list -n mlflow-env
 
-      - name: Install Missing Conda Packages
+      - name: Install Optional Packages
         shell: bash -l {0}
         run: |
           conda install -n mlflow-env numpy matplotlib seaborn --yes
 
-      - name: Debug package versions
+      - name: Debug Package Versions
         shell: bash -l {0}
         run: |
           python -c "import numpy; print('numpy:', numpy.__version__)"
@@ -60,55 +61,47 @@ jobs:
           python -c "import mlflow; print('mlflow:', mlflow.__version__)"
           python -c "import dagshub; print('dagshub:', dagshub.__version__)"
 
-      - name: Debug MLflow Commands and Version
+      - name: Debug MLflow CLI Commands and Version
         shell: bash -l {0}
         run: |
           mlflow --version
           mlflow experiments create --help
           mlflow experiments search --help
 
-      # Initialize MLflow Experiment with error handling and explicit ID retrieval
       - name: Initialize MLflow Experiment
         shell: bash -l {0}
         run: |
-           echo "Setting MLflow experiment 'Heart Disease Classification'"
-           mlflow experiments create --experiment-name "Heart Disease Classification" || echo "Experiment already exists"
-           EXPERIMENT_ID=$(mlflow experiments list --view 'active_only' | grep "Heart Disease Classification" | awk '{print $1}')
-           echo "Experiment ID: $EXPERIMENT_ID"
-           if [ -z "$EXPERIMENT_ID" ]; then
-             echo "Error: Experiment ID not found. Ensure the experiment exists and try again."
-             exit 1
-           fi
-           echo "EXPERIMENT_ID=$EXPERIMENT_ID" >> $GITHUB_ENV
+          echo "Creating or verifying MLflow experiment named 'Heart Disease Classification'..."
+          mlflow experiments create --experiment-name "Heart Disease Classification" || echo "Experiment already exists"
+          
+          # Get the experiment ID from the experiment search
+          EXPERIMENT_ID=$(mlflow experiments search --view-type active_only --filter-string "name = 'Heart Disease Classification'" --output json | jq -r '.[0].experiment_id')
+          
+          if [ -z "$EXPERIMENT_ID" ] || [ "$EXPERIMENT_ID" == "null" ]; then
+            echo "Error: Experiment ID not found, aborting workflow."
+            exit 1
+          fi
+          echo "Experiment ID: $EXPERIMENT_ID"
+          echo "EXPERIMENT_ID=$EXPERIMENT_ID" >> $GITHUB_ENV
 
-      # Debug active runs for diagnostics
-      - name: Debug MLflow Active Runs
+      - name: Debug MLflow Runs Status
         shell: bash -l {0}
         run: |
-          echo "MLflow Active Environment Run ID: $(mlflow --environment-run-id || echo 'Not set')"
-          RUN_ID=$(mlflow runs list --experiment-name 'Heart Disease Classification' --order-by descending --max-results 1 --output json | jq -r '.[0].run_id' 2>/dev/null || echo 'None')
-          echo "MLflow Active Run ID: $RUN_ID"
+          mlflow runs list --experiment-id $EXPERIMENT_ID
 
-      # Run MLflow Project explicitly using retrieved experiment ID
-      - name: Run MLflow Project with modelling.py
+      - name: Run MLflow Project with modelling.py script
         shell: bash -l {0}
-        run: |
-          mlflow run MLProject -e train -P script_name=modelling.py --experiment-id $EXPERIMENT_ID
-
-      - name: Debug MLflow Runs
-        shell: bash -l {0}
-        run: |
-          mlflow runs list --experiment-name "Heart Disease Classification"
+        run: mlflow run MLProject -e train -P script_name=modelling.py --experiment-id $EXPERIMENT_ID
 
       - name: Get latest MLflow run_id
         id: mlflow_run_id
         shell: bash -l {0}
         run: |
-          RUN_ID=$(mlflow runs list --experiment-name 'Heart Disease Classification' --order-by descending --max-results 1 --output json | jq -r '.[0].run_id' 2>/dev/null || echo 'None')
-          echo "MLflow Active Run ID: $RUN_ID"
+          RUN_ID=$(mlflow runs list --experiment-id $EXPERIMENT_ID --order-by descending --max-results 1 --output json | jq -r '.[0].run_id')
+          echo "Latest MLflow run ID: $RUN_ID"
           echo "::set-output name=run_id::$RUN_ID"
 
-      - name: Upload artifacts to GitHub
+      - name: Upload MLflow Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ml-artifacts
@@ -118,17 +111,17 @@ jobs:
             MLProject/metric_info.json
             MLProject/training_confusion_matrix.png
 
-      - name: Build Docker Image with MLflow
+      - name: Build Docker Image
         shell: bash -l {0}
         run: mlflow build-docker -p MLProject -t $DOCKER_REPOSITORY:latest
 
-      - name: Login to DockerHub
+      - name: Docker Login
         run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
 
-      - name: Tag Docker Image
+      - name: Tag Docker Image with Commit SHA
         run: docker tag $DOCKER_REPOSITORY:latest $DOCKER_REPOSITORY:$GITHUB_SHA
 
-      - name: Push Docker Image
+      - name: Push Docker Images
         run: |
           docker push $DOCKER_REPOSITORY:latest
           docker push $DOCKER_REPOSITORY:$GITHUB_SHA
