--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 env:
   REQUIREMENTS_FILE: MLProject/requirements.txt
   DOCKER_IMAGE: daffablqs/workflow-ci
-  MLFLOW_PROJECT: MLProject/MLproject
+  MLFLOW_PROJECT: MLProject
   REPO: ${{ github.repository }}
   BRANCH: main
 
@@ -19,43 +19,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Setup Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
+      - name: Setup Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
 
-    - name: Install pip dependencies from requirements.txt
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r ${{ env.REQUIREMENTS_FILE }}
-        # Install MLflow and dagshub as extra dependencies
-        pip install mlflow==2.19.0 dagshub==0.2.10
+      - name: Install pip dependencies from requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ${{ env.REQUIREMENTS_FILE }}
+          # Install MLflow and dagshub as extra dependencies
+          pip install mlflow==2.19.0 dagshub==0.2.10
 
-    - name: Run MLflow project retrain
-      run: |
-        mlflow run ${{ env.MLFLOW_PROJECT }} -e main
+      - name: Run MLflow project retrain
+        run: |
+          mlflow run ${{ env.MLFLOW_PROJECT }} -e main
 
-    - name: Commit and push model artifacts
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-        git add mlruns/
-        git commit -m "Update MLflow retrained model artifacts" || echo "No changes to commit"
-        git push origin ${{ env.BRANCH }}
+      - name: Commit and push model artifacts
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add mlruns/
+          git commit -m "Update MLflow retrained model artifacts" || echo "No changes to commit"
+          git push origin ${{ env.BRANCH }}
 
-    - name: Build Docker image
-      run: |
-        mlflow build-docker -p ${{ env.MLFLOW_PROJECT }} -t ${{ env.DOCKER_IMAGE }}
+      - name: Build Docker image
+        run: |
+          mlflow build-docker -p ${{ env.MLFLOW_PROJECT }} -t ${{ env.DOCKER_IMAGE }}
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Push Docker image
-      run: |
-        docker push ${{ env.DOCKER_IMAGE }}
+      - name: Push Docker image
+        run: |
+          docker push ${{ env.DOCKER_IMAGE }}
