--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,59 +1,57 @@
-name: MLflow Retrain and Docker CI
+name: MLflow and Docker CI
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - 'MLProject/**'
   workflow_dispatch:
 
-env:
-  REQUIREMENTS_FILE: MLProject/requirements.txt
-  DOCKER_IMAGE: daffablqs/workflow-ci
-  MLFLOW_PROJECT: MLProject
-  REPO: ${{ github.repository }}
-  BRANCH: main
-
 jobs:
-  retrain:
+  train-log-and-dockerize:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Setup Python 3.11
-        uses: actions/setup-python@v4
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
-          python-version: 3.11
+          python-version: '3.10'
 
-      - name: Install pip dependencies from requirements.txt
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ${{ env.REQUIREMENTS_FILE }}
-          pip install mlflow==2.19.0 dagshub==0.2.10
+          pip install mlflow
 
-      - name: Run MLflow project retrain
+      - name: Run MLflow Project
         run: |
-          mlflow run ${{ env.MLFLOW_PROJECT }} -e main --no-conda
+          mlflow run MLProject --env-manager=local
 
-      - name: Commit and push model artifacts
+      - name: Commit and push model artifact to GitHub
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add mlruns/
-          git commit -m "Update MLflow retrained model artifacts" || echo "No changes to commit"
-          git push origin ${{ env.BRANCH }}
+          git config user.name 'github-actions'
+          git config user.email 'github-actions@github.com'
+          git add mlruns/*
+          git commit -m 'Update model artifact from MLflow tracking' || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker image
+      - name: Get latest MLflow model artifact path
+        id: get_model_path
         run: |
-          mlflow build-docker -p ${{ env.MLFLOW_PROJECT }} -t ${{ env.DOCKER_IMAGE }}
+          MODEL_PATH=$(find mlruns -type d -path "*/artifacts/random_forest_model" | sort -r | head -n 1)
+          echo "Latest model path: $MODEL_PATH"
+          echo "MODEL_PATH=$MODEL_PATH" >> $GITHUB_ENV
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Push Docker image
+      - name: Build Docker image from latest model artifact
+        run: mlflow models build-docker -m $MODEL_PATH -n workflow-ci-model
+
+      - name: Push Docker image to Docker Hub
         run: |
-          docker push ${{ env.DOCKER_IMAGE }}
+          docker tag workflow-ci-model:latest ${{ secrets.DOCKER_USERNAME }}/workflow-ci:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/workflow-ci:latest
