--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,57 +1,59 @@
-name: MLflow and Docker CI
+name: MLflow Retrain and Docker CI
 
 on:
   push:
-    paths:
-      - 'MLProject/**'
+    branches:
+      - main
   workflow_dispatch:
 
+env:
+  REQUIREMENTS_FILE: MLProject/requirements.txt
+  DOCKER_IMAGE: daffablqs/workflow-ci
+  MLFLOW_PROJECT: MLProject
+  REPO: ${{ github.repository }}
+  BRANCH: main
+
 jobs:
-  train-log-and-dockerize:
+  retrain:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v3
+      - name: Setup Python 3.11
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: 3.11
 
-      - name: Install dependencies
+      - name: Install pip dependencies from requirements.txt
         run: |
           python -m pip install --upgrade pip
-          pip install mlflow
+          pip install -r ${{ env.REQUIREMENTS_FILE }}
+          pip install mlflow==2.19.0 dagshub==0.2.10
 
-      - name: Run MLflow Project
+      - name: Run MLflow project retrain
         run: |
-          mlflow run MLProject --env-manager=local
+          mlflow run ${{ env.MLFLOW_PROJECT }} -e main 
 
-      - name: Commit and push model artifact to GitHub
+      - name: Commit and push model artifacts
         run: |
-          git config user.name 'github-actions'
-          git config user.email 'github-actions@github.com'
-          git add mlruns/*
-          git commit -m 'Update model artifact from MLflow tracking' || echo "No changes to commit"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add mlruns/
+          git commit -m "Update MLflow retrained model artifacts" || echo "No changes to commit"
+          git push origin ${{ env.BRANCH }}
 
-      - name: Get latest MLflow model artifact path
-        id: get_model_path
+      - name: Build Docker image
         run: |
-          MODEL_PATH=$(find mlruns -type d -path "*/artifacts/random_forest_model" | sort -r | head -n 1)
-          echo "Latest model path: $MODEL_PATH"
-          echo "MODEL_PATH=$MODEL_PATH" >> $GITHUB_ENV
+          mlflow build-docker -p ${{ env.MLFLOW_PROJECT }} -t ${{ env.DOCKER_IMAGE }}
 
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image from latest model artifact
-        run: mlflow models build-docker -m $MODEL_PATH -n workflow-ci-model
-
-      - name: Push Docker image to Docker Hub
+      - name: Push Docker image
         run: |
-          docker tag workflow-ci-model:latest ${{ secrets.DOCKER_USERNAME }}/workflow-ci:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/workflow-ci:latest
+          docker push ${{ env.DOCKER_IMAGE }}
