--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,56 +1,57 @@
-name: Auto Retrain and Deploy Model
+name: MLflow CI
 
 on:
   push:
-    branches:
-      - main         
-
-env:
-  DOCKER_IMAGE: daffablqs/workflow-ci
-  PYTHON_VERSION: 3.11
+    paths:
+      - 'MLProject/**'
+  workflow_dispatch:
 
 jobs:
-  retrain-and-deploy:
+  train-log-and-dockerize:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Python ${{ env.PYTHON_VERSION }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install mlflow docker
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install mlflow
 
-    - name: Run MLflow Project for retraining
-      run: mlflow run . -e main
+      - name: Run MLflow Project
+        run: |
+          mlflow run MLProject --env-manager=local
 
-    - name: Get latest MLflow run ID
-      id: get_run_id
-      run: |
-        RUN_ID=$(mlflow runs list --order-by start_time | head -n 1 | awk '{print $1}')
-        echo "run_id=$RUN_ID" >> $GITHUB_OUTPUT
+      - name: Commit and push model artifact to GitHub
+        run: |
+          git config user.name 'github-actions'
+          git config user.email 'github-actions@github.com'
+          git add mlruns/*
+          git commit -m 'Update model artifact from MLflow tracking' || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload MLflow artifacts to GitHub Actions
-      uses: actions/upload-artifact@v3
-      with:
-        name: mlflow-artifacts-${{ steps.get_run_id.outputs.run_id }}
-        path: ./mlruns
+      - name: Get latest MLflow model artifact path
+        id: get_model_path
+        run: |
+          MODEL_PATH=$(find mlruns -type d -path "*/artifacts/random_forest_model" | sort -r | head -n 1)
+          echo "Latest model path: $MODEL_PATH"
+          echo "MODEL_PATH=$MODEL_PATH" >> $GITHUB_ENV
 
-    - name: Build Docker Image using MLflow
-      run: mlflow build-docker . -t $DOCKER_IMAGE:latest
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build Docker image from latest model artifact
+        run: mlflow models build-docker -m $MODEL_PATH -n workflow-ci-model
 
-    - name: Push Docker Image to Docker Hub
-      run: docker push $DOCKER_IMAGE:latest
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker tag workflow-ci-model:latest ${{ secrets.DOCKER_USERNAME }}/workflow-ci:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/workflow-ci:latest
