--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,10 @@ name: MLflow CI
 
 on:
   push:
-    paths:
-      - 'MLProject/**'
-  workflow_dispatch:
+    branches:
+      - main  # Ubah sesuai nama branch utama Anda, misal 'main' atau 'master'
+    # Hilangkan pembatasan 'paths' agar trigger pada seluruh perubahan push
+  workflow_dispatch:  # Tetap bisa manual trigger juga
 
 jobs:
   train-log-and-dockerize:
@@ -22,6 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install mlflow
 
       - name: Run MLflow Project
