--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install mlflow
+          pip install -r MLProject/requirements.txt
 
       - name: Run MLflow Project
         run: |
